# agentic-ai-may2026

langchain_examples/: .env.example  README.md  pyproject.toml
langchain_examples/examples/: ex10_structured_output.py  ex11_multi_agent_hierarchical.py  ex12_terminal_chatbot.py  ex13_terminical_chatbot_history.py  ex14_hierarchical_agent_routing.py  ex1_greet.py  ex2_agent.py  ex3_weather_agent.py  ex4_linkedin_post_writer.py  ex5_multiple_tools.py  ex6_sequential_multi_agent.py  ex7_bfsi_sequential_workflow.py  ex8_prompt_template.py  ex9_customer_support.py
langgraph-examples/: .env.example  CLAUDE.md  pyproject.toml
langgraph-examples/examples/: basic_workflow.py  ex10_hitl.py  ex11_terminal_chatbot.py  ex12_rag_system.py  ex13_agent_with_mcp.py  ex1_hello_world.py  ex2_greet.py  ex3_router.py  ex4_loops.py  ex5_research_clarify_answer.py  ex6_tool_call.py  ex7_tool_workflow.py  (+3 more)
mcp-server-demo/: .env.example  HOW_TO_RUN_MCP_SERVERS_REMOTELY.md  README.md  main.py  pyproject.toml
multimodal_rag_system/: .env.example  CLAUDE.md  cohere-reranking-implementation-guide.md  main.py  multimodal-rag-implementation-guide.md  pyproject.toml  schema.sql
naive_rag_system/: .env.example  CLAUDE.md  README.md  RERANKING_GUIDE.md  pyproject.toml
naive_rag_system/app/core/: db.py
naive_rag_system/app/ingestion/: ingestion_v1.py  ingestion_v1_custom_schema.py  ingestion_v2.py
naive_rag_system/app/retrieval/: retrieval_custom_old.py  retrieval_gemini.py  retrieval_hybrid.py  retrieval_openai.py
products-rest-api/: CODING_PRACTICE.md  README.md  pyproject.toml
(+8 files in other folders)
