[project]
name = "naive-rag-system"
version = "0.1.0"
description = "Naive RAG System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain[google-genai]>=1.3.1",
    "openai>=2.38.0",
    "pypdf>=6.12.0",
    "python-dotenv>=1.2.2",
    "tiktoken >=0.13.0",
]